// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameFinished should match snapshot when circle wins 1`] = `
<div
  className="restart-alignment visible"
>
  <p
    className="winner-text"
  >
    <OSymbol
      className="winner-symbol"
      shouldAnimate={false}
    />
     wins!
  </p>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;

exports[`GameFinished should match snapshot when cross wins 1`] = `
<div
  className="restart-alignment visible"
>
  <p
    className="winner-text"
  >
    <XSymbol
      className="winner-symbol"
      shouldAnimate={false}
    />
     wins!
  </p>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;

exports[`GameFinished should match snapshot when draw 1`] = `
<div
  className="restart-alignment visible"
>
  <p
    className="winner-text"
  >
    It's a draw!
  </p>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;

exports[`GameFinished should match snapshot when no one wins 1`] = `
<div
  className="restart-alignment hidden"
>
  <p
    className="winner-text"
  >
    <XSymbol
      shouldAnimate={false}
    />
    reservation
  </p>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;
